fix footer styling, spacing, and icons

--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ body {
 .main {
 	width: 80%;
 	max-width: 960px;
-	margin: 60px auto;
+	margin: 60px 60px 0px 60px;
 	/* background-color: rgba(255, 255, 255, 0.65); */
 	padding: 20px;
 	position: relative;
@@ -25,7 +25,6 @@ nav {
 	height: 60px;
 	position: fixed;
 	/*position: sticky;*/
-	/* change the z-index?? */
 	top: 0px;
 	left: 0px;
 	width: 100%;
@@ -107,10 +106,12 @@ a:hover {
 .icons {
 	color: #888;
 	font-size: 40px;
+	text-align: right;
 }
 
 .icons a {
 	color: #888;
+	padding-right: 10px;
 }
 
 .icons a:hover {
